# multivid

./: .gitignore  README.md  ansible.cfg  multivid.example.yml
ansible/: ansible.cfg  inventory.example.yml  inventory.py
ansible/group_vars/: camera_nodes.yml
ansible/host_vars/: cam-front.example.yml  cam-side.example.yml  cam-top.example.yml
ansible/playbooks/: site.yml
ansible/roles/camera_node/defaults/: main.yml
ansible/roles/camera_node/handlers/: main.yml
ansible/roles/camera_node/tasks/: main.yml
ansible/roles/camera_node/templates/: config.yaml.j2  openscan-camera-node.service.j2
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/samba_share/defaults/: main.yml
ansible/roles/samba_share/tasks/: main.yml
ansible/roles/samba_share/templates/: openscan-camera-share.conf.j2
camera_node/: pyproject.toml
camera_node/openscan_camera_node/: __init__.py  app.py  calibration.py  config.py  imaging.py  profiles.py  recorder.py
camera_node/tests/: test_calibration.py  test_profiles.py  test_recorder.py
coordinator/: pyproject.toml
coordinator/openscan_multicam_coordinator/: __init__.py  cli.py  client.py  config.py  edit_assets.py  harvest.py  operations.py  stringout.py
coordinator/openscan_multicam_coordinator/dashboard/: __init__.py  app.py
coordinator/openscan_multicam_coordinator/dashboard/static/: app.js  index.html  style.css
coordinator/tests/: test_cli.py  test_dashboard.py  test_edit_assets.py  test_harvest.py  test_stringout.py
examples/: nodes.yml  profiles.yml
