[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openscan-camera-node"
version = "0.1.0"
description = "Small HTTP camera-node service for OpenScan multicam MVPs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "Pillow>=10.0,<12.0",
]

[project.scripts]
openscan-camera-node = "openscan_camera_node.app:main"

[tool.setuptools.packages.find]
where = ["."]
