[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openscan-multicam-coordinator"
version = "0.1.0"
description = "Small coordinator CLI for OpenScan multicam camera nodes"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.scripts]
multicam = "openscan_multicam_coordinator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
