[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openscan-multicam-coordinator"
version = "0.1.0"
description = "Small coordinator CLI for OpenScan multicam camera nodes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "uvicorn>=0.27,<1.0",
]

[project.scripts]
multicam = "openscan_multicam_coordinator.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
openscan_multicam_coordinator = ["dashboard/static/*.html", "dashboard/static/*.css", "dashboard/static/*.js"]
